2011-06-08  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Use commas to separate tags.

2011-06-08  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Added a function to get the name of an alert
	  template given the alert id.
	
	* lib/PandoraFMS/Core.pm: Added support for module tags.
	
	* lib/PandoraFMS/DataServer.pm: Do not queue more than max_queue_files
	  files (not max_queue_files + 1!).

2011-06-06  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl: Use days_compact instead of days_purge in
	  pandora_compactdb.

2011-06-03  SanchO Lerena <slerena@artica.es>

	* pandora_inventory_change.pl
	pandora_inventory_change.README: New remote plugin to check changes
	in inventory, using a direct database check (only MySQL supported).

2011-06-02  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm: Do not include BADXML files when
	  evaluating max_queue_files.

2011-05-30  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed the query to get the number of unknown
	  agents. Thanks to Koichiro.

2011-05-30  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm,
	  lib/PandoraFMS/Core.pm: Added support for event alerts (Enterprise).

2011-05-23  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm: Applied Koichiro's patch to reuse an
	  already running snmptrapd.

	* lib/PandoraFMS/DataServer.pm: Do not update the configuration of
	  policy modules.

2011-05-23  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm
	lib/PandoraFMS/Core.pm
	util/pandora_db.pl
	util/pandora_manage.pl: Added minor functions and fixes to policy queue
	and call to clean policy queue in maintenance script

2011-05-12  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added check of the returning of add 
	operation to queue

2011-05-12  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm: Added a function to give the address of
	one agent
